--- a/day-1/lesson-07-namespace-intro/namespace_intro.yaml
+++ b/day-1/lesson-07-namespace-intro/namespace_intro.yaml
@@ -6,7 +6,6 @@ metadata:
   labels:
     name: code-district
 
----
 apiVersion: v1
 kind: Pod
 metadata:
@@ -19,7 +18,7 @@ spec:
   - name: pinger
     image: reselbob/pinger
     ports:
-        containerPort: 3000
+      - containerPort: 3000
     env:
       - name: CURRENT_EXERCISE_VERSION
         value: LESSON_07
