--- a/day-1/lesson-10-persistent-volumes/sticky-pv.yaml
+++ b/day-1/lesson-10-persistent-volumes/sticky-pv.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   storageClassName: manual
   capacity:
-    storage: 10Mi
+    storage: 10Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
