--- a/day-1/lesson-07-namespace-intro/namespace_intro.yaml
+++ b/day-1/lesson-07-namespace-intro/namespace_intro.yaml
@@ -5,7 +5,7 @@ metadata:
   name: code-district
   labels:
     name: code-district
-
+---
 apiVersion: v1
 kind: Pod
 metadata:
@@ -16,7 +16,7 @@ metadata:
 spec:
   containers:
   - name: pinger
-    image: reselbob/pinger
+    image: reselbob/pinger:v2.1
     ports:
       - containerPort: 3000
     env:
