--- a/day-2/lesson-15-ingress/ingress.yaml
+++ b/day-2/lesson-15-ingress/ingress.yaml
@@ -11,7 +11,7 @@ spec:
     - host: moe.info
       http:
         paths:
-        - path: /moe
+        - path: /
           backend:
             serviceName: moe
             servicePort: 3000
