--- a/day-2/lesson-18-helm/chart_stooge/templates/deployment.yaml
+++ b/day-2/lesson-18-helm/chart_stooge/templates/deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: moe
     spec:
       containers:
-        - image: {{.Values.image}
+        - image: {{.Values.image}}
           imagePullPolicy: Always
           name: moe
           env:
