--- a/day-2/lesson-18-helm/chart_stooge/templates/deployment.yaml
+++ b/day-2/lesson-18-helm/chart_stooge/templates/deployment.yaml
@@ -21,6 +21,6 @@ spec:
           - name: CURRENT_VERSION
             value: {{.Values.currentVersion}}
           - name: STOOGE
-            value: I am Moe, no relation to Curly"
+            value: "I am Moe, no relation to Curly"
           ports:
             - containerPort: {{.Values.containerPort}}
