--- a/day-2/lesson-18-helm/chart_stooge/templates/ingress.yaml
+++ b/day-2/lesson-18-helm/chart_stooge/templates/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   name: stoogeingress
 spec:
   backend:
-    serviceName: moe
+    serviceName: stooge
     servicePort: {{.Values.servicePort}}
   rules:
   - host:
