--- a/day-2/lesson-18-helm/chart_stooge/values.yaml
+++ b/day-2/lesson-18-helm/chart_stooge/values.yaml
@@ -1,7 +1,2 @@
-image: reselbob/pinger:v2.1
-containerPort: 3000
-currentVersion: LESSON_18
-scale: 2
-servicePort: 3000
-serviceTargetPort: 3000
+lesson: LESSON_8_HELM
 author: reselbob
