--- a/day-2/lesson-18-helm/chart_stooge/templates/ingress.yaml
+++ b/day-2/lesson-18-helm/chart_stooge/templates/ingress.yaml
@@ -2,16 +2,10 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: stoogeingress
+  name: nginx-ingress
+  annotations:
+    http.port: "443"
 spec:
   backend:
-    serviceName: stooge
-    servicePort: {{.Values.servicePort}}
-  rules:
-  - host:
-    http:
-      paths:
-      - path: /moe
-        backend:
-          serviceName: moe
-          servicePort: {{.Values.servicePort}}
+    serviceName: nginx
+    servicePort: 80
