--- a/day-2/lesson-18-helm/chart_stooge/templates/service.yaml
+++ b/day-2/lesson-18-helm/chart_stooge/templates/service.yaml
@@ -2,10 +2,10 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: nginx
+  name: oker
 spec:
   selector:
-    app: nginx
+    app: oker
   ports:
     - name: main
       protocol: TCP
