--- a/day-2/lesson-18-helm/chart_stooge/templates/deployment.yaml
+++ b/day-2/lesson-18-helm/chart_stooge/templates/deployment.yaml
@@ -2,20 +2,20 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: nginx
+  name: oker
 spec:
-  replicas: 3
+  replicas: {{.Values.replicas}}
   selector:
     matchLabels:
-      app: nginx
+      app: oker
   template:
     metadata:
       labels:
-        app: nginx
+        app: oker
     spec:
       containers:
-        - image: "nginx:1.13"
-          name: nginx
+        - image: 8s.gcr.io/hpa-example
+          name: oker
           ports:
             - containerPort: 80
           env:
