--- a/day-2/lesson-18-helm/chart_oker/templates/deployment.yaml
+++ b/day-2/lesson-18-helm/chart_oker/templates/deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: oker
     spec:
       containers:
-        - image: 8s.gcr.io/hpa-example
+        - image: k8s.gcr.io/hpa-example
           name: oker
           ports:
             - containerPort: 80
