--- a/day-2/lesson-18-helm/chart_stooges/templates/deployment.yaml
+++ b/day-2/lesson-18-helm/chart_stooges/templates/deployment.yaml
@@ -4,7 +4,7 @@ kind: Deployment
 metadata:
   name: curly
 spec:
-  replicas: 1
+  replicas: {{Values.replicas}}
   selector:
     matchLabels:
       app: curly
@@ -19,7 +19,7 @@ spec:
           name: curly
           env:
           - name: CURRENT_VERSION
-            value: LESSON_18
+            value: {{Values.lesson}}
           - name: STOOGE
             value: "I am Curly"
           ports:
@@ -30,7 +30,7 @@ kind: Deployment
 metadata:
   name: larry
 spec:
-  replicas: 1
+  replicas: {{Values.replicas}}
   selector:
     matchLabels:
       app: larry
@@ -45,7 +45,7 @@ spec:
           name: larry
           env:
           - name: CURRENT_VERSION
-            value: LESSON_18
+            value: {{Values.lesson}}
           - name: STOOGE
             value: "I am Larry"
           ports:
@@ -56,7 +56,7 @@ kind: Deployment
 metadata:
   name: moe
 spec:
-  replicas: 1
+  replicas: {{Values.replicas}}
   selector:
     matchLabels:
       app: moe
@@ -71,7 +71,7 @@ spec:
           name: moe
           env:
           - name: CURRENT_VERSION
-            value: LESSON_18
+            value: {{Values.lesson}}
           - name: STOOGE
             value: "I am Moe"
           ports:
