--- a/day-2/lesson-18-helm/chart_stooges/templates/deployment.yaml
+++ b/day-2/lesson-18-helm/chart_stooges/templates/deployment.yaml
@@ -4,7 +4,7 @@ kind: Deployment
 metadata:
   name: curly
 spec:
-  replicas: {{Values.replicas}}
+  replicas: {{.Values.replicas}}
   selector:
     matchLabels:
       app: curly
