--- a/day-2/lesson-18-helm/chart_stooges/templates/deployment.yaml
+++ b/day-2/lesson-18-helm/chart_stooges/templates/deployment.yaml
@@ -30,7 +30,7 @@ kind: Deployment
 metadata:
   name: larry
 spec:
-  replicas: {{Values.replicas}}
+  replicas: {.{Values.replicas}}
   selector:
     matchLabels:
       app: larry
@@ -56,7 +56,7 @@ kind: Deployment
 metadata:
   name: moe
 spec:
-  replicas: {{Values.replicas}}
+  replicas: {{.Values.replicas}}
   selector:
     matchLabels:
       app: moe
