--- a/day-1/lesson-04-pods/complexpod.yaml
+++ b/day-1/lesson-04-pods/complexpod.yaml
@@ -15,8 +15,8 @@ spec:
     env:
       - name: CURRENT_EXERCISE_VERSION
         value: LESSON_04
-  - name: hpa-example
-    image: k8s.gcr.io/hpa-example
+  - name: pinger
+    image: reselbob/pinger:v2.1
     ports:
       - name: app
         containerPort: 3000
