--- a/lesson-08-services/deployment.yaml
+++ b/lesson-08-services/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: pinger
-          image: reselbob/pinger
+          image: reselbob/pinger:v2.2
           ports:
             -
               containerPort: 3000
